# wasm-java-agents-blueprint

./: .gitignore  .pre-commit-config.yaml  Blog.md  CONTRIBUTING.md  Notes.md  README.md  mkdocs.yml  pom.xml  pyproject.toml
docs/: architecture.md  customization.md  getting-started.md  index.md
docs/assets/: custom.css
scripts/: build-go.sh  build-python.sh  build-rust.sh  get_extism.sh  get_tinygo.sh  get_wasi_sdk.sh
src/main/java/org/acme/getting/started/: ChatService.java  GoGreetingService.java  GreetingResource.java  JsGreetingService.java  PythonGreetingService.java  RustGreetingService.java
src/main/resources/: application.properties
src/main/resources/demos/go/: greet.go  greet.wasm
src/main/resources/demos/js/: greet.js
src/main/resources/demos/python/: greet.py
src/main/resources/demos/rust/: Cargo.toml  hello_agent.wasm
src/main/resources/demos/rust/src/: lib.rs
src/test/java/org/acme/getting/started/: GreetingResourceTest.java
