[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wasm-java-agents-blueprint"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
description = "Running AI agents in the JVM"
dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

dev = [
  "ruff",
]

[project.urls]
Documentation = "https://github.com/roastedroot/wasm-java-agents-blueprint"
Issues = "https://github.com/roastedroot/wasm-java-agents-blueprint/issues"
Source = "https://github.com/roastedroot/wasm-java-agents-blueprint"

[tool.setuptools]
# Tell setuptools this is not a Python package, just a project with dependencies
packages = []
py-modules = []
